Сделал чтобы все тесты работали через testcontainers